--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "nuxt": "^3.11.2",
+    "reset-css": "^5.0.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "sass": "^1.75.0"
   }
 }
